--- a/package.json
+++ b/package.json
@@ -22,13 +22,7 @@
   ],
   "icon": "images/icon.png",
   "activationEvents": [
-    "onLanguage:verilog",
-    "onLanguage:systemverilog",
-    "onLanguage:bsv",
-    "onLanguage:vhdl",
-    "onLanguage:ucf",
-    "onLanguage:sdc",
-    "onLanguage:xdc"
+    "onStartupFinished"
   ],
   "main": "./dist/main.js",
   "contributes": {
